<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <!-- HU: Gestión de Retos -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_reto"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/etReto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reto_descripcion_hint"
        android:importantForAutofill="no"
        android:inputType="text" />
    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar" />
</LinearLayout>
